Add information about one book in frontend
