# readalyse-frontend/src/app/data-access/api/model/models.ts
@@ -11,12 +11,14 @@ export * from './language';
 export * from './languageList';
 export * from './pagination';
 export * from './person';
+export * from './readingStatus';
 export * from './registerRequest';
 export * from './resource';
 export * from './resourceList';
 export * from './review';
 export * from './reviewList';
 export * from './roleEnum';
+export * from './statusEnum';
 export * from './subject';
 export * from './subjectList';
 export * from './user';
