# readalyse-frontend/src/app/data-access/api/model/readingStatus.ts
@@ -1,0 +1,24 @@
+/**
+ * Readalyse API
+ * Readalyse API
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { StatusEnum } from './statusEnum';
+
+
+export interface ReadingStatus { 
+    id?: number;
+    book?: number;
+    user?: number;
+    status?: StatusEnum;
+}
+export namespace ReadingStatus {
+}
+
+
