# readalyse-frontend/src/app/data-access/api/model/statusEnum.ts
@@ -1,0 +1,21 @@
+/**
+ * Readalyse API
+ * Readalyse API
+ *
+ * The version of the OpenAPI document: 0.0.1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export type StatusEnum = 'WANT_TO_READ' | 'CURRENTLY_READING' | 'READ';
+
+export const StatusEnum = {
+    WantToRead: 'WANT_TO_READ' as StatusEnum,
+    CurrentlyReading: 'CURRENTLY_READING' as StatusEnum,
+    Read: 'READ' as StatusEnum
+};
+
